# calc

./: CMakeLists.txt  README.md  calc.cpp
.cache/clangd/index/: calc.cpp.23B0091199E7B191.idx
src/: calc.cpp
